Adding key usage and extended usage attributes Change signing algorithm Fixed signing issues